Added the function for the states of the SP500

--- a/get_stock_info.ipynb
+++ b/get_stock_info.ipynb
@@ -102,6 +102,33 @@
    "execution_count": null,
    "id": "7fb2e06a",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "states_SP = generate_state_data_from_yfinance_dates(\n",
+    "    ticker=\"SPY\",\n",
+    "    start=\"2023-01-01\",\n",
+    "    end=\"2023-04-01\",\n",
+    "    window_size=10\n",
+    ")\n",
+    "\n",
+    "print(\"First 5 states:\")\n",
+    "for s in states_SP[:5]:\n",
+    "    print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50bbd320",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
