--- a/get_stock_info.ipynb
+++ b/get_stock_info.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7fb2e06a",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n"
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 5 states:\n",
+      "[369.257080078125, 369.257080078125, 369.257080078125, 74850700]\n",
+      "[372.1078796386719, 372.1078796386719, 370.68247985839844, 85934100]\n",
+      "[367.86077880859375, 372.1078796386719, 369.7419128417969, 76970500]\n",
+      "[376.29656982421875, 376.29656982421875, 371.38057708740234, 104189600]\n",
+      "[376.0832824707031, 376.29656982421875, 372.3211181640625, 73978100]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
