Psuedo van ROnnieeeeeee

--- a/Notebook_JH_Test_Plots_Update (1).ipynb
+++ b/Notebook_JH_Test_Plots_Update (1).ipynb
@@ -1134,6 +1134,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26efa37a",
+   "metadata": {},
+   "source": [
+    "## DQNAgent Initialization Cell\n",
+    "\n",
+    "Below is what happens when we initialize the DQNAgent class and inspect its key components.\n",
+    "\n",
+    "```pseudo\n",
+    "# 1. Define class DQNAgent(state_dim, action_dim, target_update_freq)\n",
+    "    # – build online_model and target_model (same initial weights)\n",
+    "    # – create replay_buffer (deque, maxlen=10 000)\n",
+    "    # – set ε = 1.0, ε_min = 0.01, ε_decay = 0.999\n",
+    "    # – set γ = 0.99\n",
+    "    # – set target_update_freq (e.g. 100)\n",
+    "    # – initialize optimizer = Adam(online_model.params)\n",
+    "    # – prepare device (cuda if available, else cpu)\n",
+    "    # – move models to device\n",
+    "\n",
+    "# 2. Hyper‐parameters (defaults)\n",
+    "    state_dim       ← user input\n",
+    "    action_dim      ← user input\n",
+    "    memory.maxlen   ← 10 000\n",
+    "    batch_size      ← 32\n",
+    "    γ (gamma)       ← 0.99\n",
+    "    ε (epsilon)     ← 1.0 → 0.01\n",
+    "    ε_decay         ← 0.999\n",
+    "    target_update_freq ← 100\n",
+    "    optimizer       ← Adam\n",
+    "\n",
+    "# 3. Network architecture\n",
+    "    online_model:\n",
+    "        Linear(state_dim → 64) → ReLU\n",
+    "        Linear(64 → 64)         → ReLU\n",
+    "        Linear(64 → action_dim)\n",
+    "    target_model ← deep copy of online_model\n",
+    "\n",
+    "# 4. Core methods\n",
+    "    act(state):\n",
+    "        if rand() < ε:\n",
+    "            return random_action()\n",
+    "        else:\n",
+    "            return argmax Q_online(state)\n",
+    "\n",
+    "    remember(s,a,r,s’,done):\n",
+    "        replay_buffer.append((s,a,r,s’,done))\n",
+    "\n",
+    "    train(batch_size=32):\n",
+    "        if len(replay_buffer) < batch_size: return\n",
+    "        sample batch from replay_buffer\n",
+    "        compute current_q = Q_online(states,actions)\n",
+    "        compute next_q    = max_a’ Q_target(next_states,a’)\n",
+    "        compute target_q  = rewards + γ * next_q * (1–dones)\n",
+    "        loss = MSE(current_q, target_q)\n",
+    "        backward pass & optimizer.step()\n",
+    "        ε ← max(ε_min, ε * ε_decay)\n",
+    "        every target_update_freq steps:\n",
+    "            copy online_model → target_model\n",
+    "\n",
+    "# 5. Checkpointing\n",
+    "    save_model(path):\n",
+    "        torch.save({\n",
+    "            model_state_dict,\n",
+    "            target_model_state_dict,\n",
+    "            optimizer_state_dict,\n",
+    "            epsilon\n",
+    "        }, path)\n",
+    "\n",
+    "    load_model(path):\n",
+    "        load state_dicts and ε back into agent\n",
+    "\n",
+    "# 6. Reward‐tracking placeholders (V1)\n",
+    "    self.reward_method ← \"log\" (default)\n",
+    "    self.recent_returns ← []\n",
+    "    self.prev_price     ← None\n",
+    "    self.running_max    ← 0\n",
+    "\n",
+    "# 7. Usage\n",
+    "    # In a notebook cell:\n",
+    "    agent = DQNAgent(state_dim=…, action_dim=…, target_update_freq=100)\n",
+    "    # agent is now ready for training loops, calling .act, .remember, .train, and .save_model()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "22fad643-667f-48b9-b29c-4f3e5d5b38b4",
@@ -1284,6 +1368,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15ef8dc5",
+   "metadata": {},
+   "source": [
+    "Here we initialise the states using the train and test data:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "eb154522-18ed-40f0-b713-6b907a11ef20",
@@ -1303,6 +1395,14 @@
     "\n",
     "train_features=np.column_stack([train_price,train_states])\n",
     "test_features=np.column_stack([test_price,test_states])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d34f11a",
+   "metadata": {},
+   "source": [
+    "Statistical Testing"
    ]
   },
   {
@@ -1337,6 +1437,65 @@
    },
    "source": [
     "### Read the cell underneath line by line and understand what is happening!!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81f5932a",
+   "metadata": {},
+   "source": [
+    "### Pseudocode Summary of Training Loop\n",
+    "\n",
+    "```pseudo\n",
+    "# --- Setup ---\n",
+    "define reward_types = [\"raw\", \"log\", \"sharpe\", \"benchmark\", \"drawdown\"]\n",
+    "compute buy_and_hold_return from price data\n",
+    "\n",
+    "for each reward_type in reward_types:\n",
+    "    initialize a fresh DQNAgent\n",
+    "    set agent.reward_method = reward_type\n",
+    "    init WandB run for this reward_type\n",
+    "\n",
+    "    # --- Per-Episode Loop ---\n",
+    "    for episode in 1 … no_episodes:\n",
+    "        reset portfolio and agent statistics\n",
+    "        clear episode_losses, total_reward, good_calls, etc.\n",
+    "\n",
+    "        # --- Per-Time-Step Loop ---\n",
+    "        for t in 0 … (T-1):\n",
+    "            state ← states[t]\n",
+    "            action ← agent.act(state)\n",
+    "            update good_calls based on price vs. mean\n",
+    "\n",
+    "            old_portfolio = deepcopy(portfolio)\n",
+    "            portfolio ← state_transition_with_action(price_t, portfolio, action)\n",
+    "            next_price ← train_features[t+1][0]\n",
+    "\n",
+    "            # choose reward calculation based on reward_type\n",
+    "            reward ← call appropriate reward_function(...)\n",
+    "            total_reward += reward\n",
+    "\n",
+    "            record portfolio value and action\n",
+    "            agent.remember(state, action, reward, next_state, done)\n",
+    "            loss = agent.train()\n",
+    "            if loss: append to episode_losses\n",
+    "\n",
+    "        # --- End of Episode Metrics ---\n",
+    "        avg_loss = mean(episode_losses)\n",
+    "        compute returns, sharpe, max_drawdown, cum_return\n",
+    "        compute action_distribution and good_calls_ratio\n",
+    "        log metrics to episode_metrics and print progress\n",
+    "\n",
+    "    # --- After All Episodes ---\n",
+    "    agent.save_model(...)\n",
+    "    finish WandB run\n",
+    "\n",
+    "    # --- Plot & Log ---\n",
+    "    for each metric in [loss, rewards, good_calls_ratio, cum_return, sharpe, action_distribution]:\n",
+    "        create matplotlib figure, plot metric vs. episode\n",
+    "        append figure to WandB log\n",
+    "    WandB.log all plots\n",
+    "    WandB.finish()"
    ]
   },
   {
@@ -4235,6 +4394,14 @@
     "    wandb.log({\"plots\":imgs_to_log})\n",
     "    wandb.finish()  # <-- Important to separate runs in wandb, V1 addition\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13783454",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
